css/main.css
/* ... */
.process-cta:active {
  background-color: #4E1A00;
  transition: 0s;
  color: var(--white);
}

.row a {
  color: #0057AD;
}

.row-cta,
.row a .fa,
.modal-exit,
.modal-exit-bottom {
  font-weight: 600;
}

.row a:hover {
  filter: brightness(30%);
}

.row-cta span {
  padding-right: 0px;
  transition: 0.4s;
}

.row-cta:hover span {
  padding-right: 10px;
  transition: 0.4s;
}

.content {
  color: var(--black);
  padding: 40px 0;
  font-family: "chaloops", sans-serif;
}

.flex {
  display: flex;
  align-items: center;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

#pricing .flex {
  flex-direction: row;
}

#travel .flex {
  flex-direction: row-reverse;
}

.content h3 {
  font-weight: 900;
  font-family: 'chaloops-bold', sans-serif;
  font-size: 2em;
  line-height: 2em;
  padding: 10px 20px;
}

.flex h3 {
  text-align: left;
}

.content p {
  font-weight: 400;
  font-size: 1.7em;
  line-height: 1.5em;
  padding: 10px 20px;
  box-sizing: border-box;
}

.flex p {
  text-align: left;
}

.content img {
  padding: 10px;
  box-sizing: border-box;
}

.content nav {
  justify-content: left;
  padding-left: 20px;
}

.text {
  max-width: 600px;
  width: 100%;
}

#questions {
  background-color: var(--gray);
}

#questions .text {
  max-width: 1000px;
  width: 100%;
  text-align: left;
  margin: auto;
}

#questions h3 {
  text-align: center;
}

.question {
  display: flex;
  justify-content: space-between;
  font-weight: 600;
  font-family: 'chaloops-medium', sans-serif;
}

.question:hover {
  color: var(--linksHover);
  cursor: pointer;
}

.question-container {
  border-bottom: solid;
  border-bottom-color: var(--black);
  border-bottom-width: 1px;
  margin: 15px 10px 0;
}

.question .fa {
  padding-left: 5px;
  box-sizing: border-box;
}

strong {
  font-family: 'chaloops-bold', sans-serif;
}

/************* Media Items ****************/

.media-logo {
  padding: 20px 10px;
  box-sizing: border-box;
}

.black {
  background-color: var(--black);
}

button {
  cursor: pointer;
  padding: 10px 30px;
  background: transparent;
  border: solid var(--black) 1px;
  color: var(--black);
}

button:hover {
  background: var(--black);
  color: var(--white);
}

.black button {
  border: solid var(--white) 1px;
  color: var(--white);
}

.black button:hover {
  background: var(--white);
  color: var(--black);
}

.center {
  text-align: center;
  display: block;
  margin: auto;
}

.video-container {
  display: flex;
  flex-direction: column;
  margin: 10px;
}

.video-container iframe {
  max-width: 300px;
  width: 100%;
  margin-bottom: 10px;
  min-height: 600px;
}

/************* Shop *********************/

.shop .row {
  display: flex;
  flex-wrap: wrap;
  /* Allow items to wrap on smaller screens */
  justify-content: center;
  align-items: stretch;
  /* Ensure items have equal height */
  padding: 10px 15px;
  /* Reduced horizontal padding for better mobile view */
  gap: 20px;
  /* Add space between items */
}

.shop .item {
  flex: 0 1 calc(25% - 20px);
  /* Base width for desktop (4 items per row) */
  max-width: 400px;
  /* Maximum width for larger items */
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
}

.shop .image-container {
  position: relative;
  width: 100%;
  /* Make width responsive */
  aspect-ratio: 1 / 1.1;
  /* Maintain a consistent aspect ratio */
  perspective: 1000px;
}

.shop .image-container img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  backface-visibility: hidden;
  transition: transform 0.5s;
}

@media screen and (max-width: 1000px) {
  .shop .item {
    flex: 0 1 100%;
    width: 100%;
    margin: 10px auto;
  }
}

@media screen and (max-width: 700px) {
  .shop .content img {
    padding: 10px;
  }
}

.shop .text {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding: 10px;
  flex-grow: 1;
}

.shop .text button {
  width: 100%;
  max-width: 200px;
  margin: 5px 0;
}

.shop .image-container .back {
  transform: rotateY(180deg);
  /* Initially rotate the back image */
}

.shop .image-container.flipped .front {
  transform: rotateY(180deg);
  /* Flip the front image */
}

.shop .image-container.flipped .back {
  transform: rotateY(0deg);
  /* Rotate the back image back to normal */
}

.shop .item form section img {
  width: 70px;
  height: auto !important;
}

.shop .item form input {
  text-align: center;
  border: none;
  border-radius: 1.5rem;
  min-width: 11.625rem;
  padding: 0 2rem;
  height: 2.625rem;
  font-weight: bold;
  background-color: #000000;
  color: #ffffff;
  font-family: "Helvetica Neue", Arial, sans-serif;
  font-size: 1rem;
  line-height: 1.25rem;
  cursor: pointer;
}

/************* Footer *******************/

footer {
  text-align: center;
  background-color: var(--gray);
  font-family: 'Montserrat', 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: 400;
  color: var(--black);
  padding: 30px 50px;
}

footer a {
  font-family: 'Montserrat', 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: 400;
  color: var(--black);
  padding: 0px 8px;
  box-sizing: border-box;
}

footer a:hover {
  filter: brightness(30%);
}

footer a:active {
  filter: brightness(10%);
}

footer div {
  padding-bottom: 0px;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: relative;
}

/************* Invoice ********************/

.invoice .right {
  text-align: right;
}

.invoice .row {
  justify-content: space-between;
}

.invoice #sum {
  font-size: 10rem;
  font-family: 'chaloops', sans-serif;
}

.invoice .end {
  justify-content: flex-end !important;
}

.gray {
  background-color: #DDD;
}

.invoice h3 {
  font-size: 5rem;
  font-family: 'chaloops', sans-serif;
}
/* ... */

